--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
     "scikit-learn>=1.8.0",
     "sqlalchemy>=2.0.45",
     "uvicorn>=0.40.0",
