almost finalised changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,11 @@ services:
       - DB_NAME=mydb
       - ENV=DEV
       - CHURN_PRED_URL=http://app:8000
+      - VALKEY_HOST=valkey
+      - VALKEY_PORT=6379
     depends_on:
       - db
+      - valkey
     volumes:
       - ./ml_models:/app/ml_models
       - ./data:/app/data
@@ -27,6 +30,11 @@ services:
       - "5431:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  valkey:
+    image: valkey/valkey:latest
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
